--- a/sites/all/themes/itg/sass/_itg-mixins.scss
+++ b/sites/all/themes/itg/sass/_itg-mixins.scss
@@ -215,6 +215,7 @@ $root-font-size: 16px;
         .#{$class-title}{
             display: block;     
             overflow: hidden;
+            word-wrap: break-word;
             @include font(14px,19px);
             color: $black-color;            
         }    
