align story img.

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -2487,6 +2487,7 @@ footer .multiple-items-footer i.slick-next {
 }
 .story-section .story-right .stryimg {
   position: relative;
+  text-align: center;
 }
 .story-section .story-right .stryimg .saved-photogallery {
   background: #fff none repeat scroll 0 0;
@@ -2509,6 +2510,7 @@ footer .multiple-items-footer i.slick-next {
   display: none;
 }
 .story-section .story-right .stryimg .photoby {
+  text-align: left;
   position: absolute;
   bottom: 0;
   left: 0;
