--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -10357,6 +10357,7 @@ h1.about-us-heading{
                 .slick-next{ 
                     right: 0;
                 }
+                .podcast-nav-item{cursor: pointer;}
             }
         }        
     }
