resolve ui issues

--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11014,7 +11014,7 @@ span.file a{pointer-events: none; color: #2f2f2f;}
     }
   }
 }
-.view.view-display-id-search_unpublish_video, .view-id-searchimage.view-display-id-page_1{
+.view.view-display-id-search_unpublish_video, .view-id-searchimage.view-display-id-page_1, .view-display-id-search_publish_video_radio{
   .view-filters{
     padding-bottom: 20px;
     .views-exposed-form{
