theme quiz correct and incorrect messages.

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -11506,9 +11506,25 @@ span.file a {
 [id*="itg-quiz-quiz-form"] .answer-container .answer-container-actual {
   text-align: center;
 }
+[id*="itg-quiz-quiz-form"] .answer-container .answer-container-actual .correct-ans, [id*="itg-quiz-quiz-form"] .answer-container .answer-container-actual .incorrect-ans {
+  font-size: 28px;
+  line-height: 32px;
+  padding: 10px 0 20px;
+  text-transform: capitalize;
+}
+[id*="itg-quiz-quiz-form"] .answer-container .answer-container-actual .correct-ans {
+  color: #1ece1e;
+}
+[id*="itg-quiz-quiz-form"] .answer-container .answer-container-actual .incorrect-ans {
+  color: red;
+}
+[id*="itg-quiz-quiz-form"] .answer-container .answer-container-actual strong {
+  font-size: 16px;
+  font-weight: 400;
+}
 [id*="itg-quiz-quiz-form"] .answer-container #show_answer {
   width: 135px;
-  margin: 10px auto;
+  margin: 20px auto;
   display: block;
 }
 
