--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -10915,10 +10915,22 @@ span.file a{pointer-events: none; color: #2f2f2f;}
   .answer-container{
     .answer-container-actual{
       text-align: center;
+      .correct-ans, .incorrect-ans {
+        font-size: 28px;
+        line-height: 32px;
+        padding: 10px 0 20px;
+        text-transform: capitalize;
+      }
+      .correct-ans{color: #1ece1e;}
+      .incorrect-ans{color: red;}
+      strong {
+        font-size: 16px;
+        font-weight: 400;
+      }
     }
     #show_answer{
       width: 135px;
-      margin: 10px auto;
+      margin: 20px auto;
       display: block;
     }
   }
