resolve ui issues

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -2919,7 +2919,7 @@ footer{
     #main{min-height: 0;}
 }
 /*Start snap post css*/
-.page-snappost{ 
+.page-snap-post{ 
     header{
         margin-bottom: 0;
     }
