ITG-1828 #time 3h #comment theming done.

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -486,7 +486,7 @@ div.filefield-sources-list a.active {
 #views-form-photo-carousel-widget-video-carousel-list .form-actions a, [id*="views-form-photo-gallery-management-page"] .form-actions a, .cancel-image, .block-itg-layout-manager .layout-filter-btn .layout-reset, #itg-layout-manager-filter-form .layout-filter-btn .layout-reset, #block-itg-layout-manager-layout-button-block .layout-button .btn-cancel, [id*="itg-manage-budget"] #edit-budget-submit + a, .comment-view .publish-ugc-comments, #itg-user-log-api-form > div > div.user-log-filter-btn a, #itg-user-log-api-form-visited > div > div.user-log-filter-btn a, [id*="views-form-itg-custom-widget-page"] .form-actions a, [id*="itg-user-block-api-form"] .user-log-filter-btn .user-log-reset, #views-form-poll-widget-poll-widget-format .form-actions a,
 #views-form-issue-base-magazin-widget-issue-base-magazin-widget .form-actions a,
 #views-form-supplement-base-magazin-widget-supplement-base-magazin-widget .form-actions a,
-#views-form-category-of-stroy-base-magazin-widget-issue-category-magazin-widget .form-actions a {
+#views-form-category-of-stroy-base-magazin-widget-issue-category-magazin-widget .form-actions a, [id*="itg-active-user-report-form"] .user-log-filter-btn .user-log-reset {
   border-radius: 1px;
   border: 1px solid #ee4d4d;
   background-color: #ee4d4d;
@@ -521,7 +521,7 @@ div.filefield-sources-list a.active {
 #views-form-photo-carousel-widget-video-carousel-list .form-actions a:hover, [id*="views-form-photo-gallery-management-page"] .form-actions a:hover, .cancel-image:hover, .block-itg-layout-manager .layout-filter-btn .layout-reset:hover, #itg-layout-manager-filter-form .layout-filter-btn .layout-reset:hover, #block-itg-layout-manager-layout-button-block .layout-button .btn-cancel:hover, [id*="itg-manage-budget"] #edit-budget-submit + a:hover, .comment-view .publish-ugc-comments:hover, #itg-user-log-api-form > div > div.user-log-filter-btn a:hover, #itg-user-log-api-form-visited > div > div.user-log-filter-btn a:hover, [id*="views-form-itg-custom-widget-page"] .form-actions a:hover, [id*="itg-user-block-api-form"] .user-log-filter-btn .user-log-reset:hover, #views-form-poll-widget-poll-widget-format .form-actions a:hover,
 #views-form-issue-base-magazin-widget-issue-base-magazin-widget .form-actions a:hover,
 #views-form-supplement-base-magazin-widget-supplement-base-magazin-widget .form-actions a:hover,
-#views-form-category-of-stroy-base-magazin-widget-issue-category-magazin-widget .form-actions a:hover {
+#views-form-category-of-stroy-base-magazin-widget-issue-category-magazin-widget .form-actions a:hover, [id*="itg-active-user-report-form"] .user-log-filter-btn .user-log-reset:hover {
   box-shadow: 0 0 2px #ee4d4d;
 }
 
@@ -657,7 +657,7 @@ div.filefield-sources-list a.active {
   box-shadow: 0 0 2px #ee4d4d;
 }
 
-.btn-small, [id*="itg-social-media-form"] > div fieldset .form-submit, .node-event_backend-form .anchor-order-reorder, .node-photogallery-form .form-field-name-field-common-audio-file .form-managed-file .form-file + .form-submit, .search-criteria .form-submit, .save-checklist-ordre .save-checklist, [id*="field-podcast-audio-upload-values"] tbody tr td:nth-child(2) .form-type-managed-file .file-widget .form-file + .form-submit, [id*="loyality-reward-points-configuration-form"] .form-type-managed-file .form-managed-file .form-file + .form-submit, #itg_video_content .ftp-server .video_filters > div.apply_video_filter span, #itg_video_content .ftp-server .video_filters > div.reset_video_filter span, .itg_menu_manager_form .form-item-category-icon .form-submit, .node-story-form .form-field-name-field-story-technology [id*="field-story-technology-values"] tbody tr td .field-name-field-technology-sample-photo .form-type-managed-file .image-widget-data input[type="file"] + .form-submit, [id*="itg-manage-budget"] .form-managed-file #edit-budget-image-upload-button, #itg-budget-predictor-search-form .form-submit, #itg-budget-predictor-search-form .custom-url-search, #itg-budget-predictor-search-user-form .form-submit, #itg-budget-predictor-search-user-form .custom-url-search, [id*="daily-motion-video-dashboard"] fieldset #edit-display-button, [id*="daily-motion-video-dashboard"] #edit-reset, .page-admin-structure-taxonomy-cheaper-dearer .form-file + .form-submit, .comment-view .publish-ugc-comments, .multi_reporter .multi-byline, .byline-list .save-byline, .itg-smi .data-popup-link, [id*="field-photo-story-values"] tbody tr td .form-type-managed-file .image-widget-data input[type="file"] + .form-submit, #itg-user-log-api-form > div > div.user-log-filter-btn .form-submit, #itg-user-log-api-form-visited > div > div.user-log-filter-btn .form-submit, #itg-user-log-api-form > div > div.user-log-filter-btn a, #itg-user-log-api-form-visited > div > div.user-log-filter-btn a, [id*="itg-user-block-api-form"] .user-log-filter-btn .user-block-apply, [id*="itg-user-block-api-form"] .user-log-filter-btn .user-log-reset {
+.btn-small, [id*="itg-social-media-form"] > div fieldset .form-submit, .node-event_backend-form .anchor-order-reorder, .node-photogallery-form .form-field-name-field-common-audio-file .form-managed-file .form-file + .form-submit, .search-criteria .form-submit, .save-checklist-ordre .save-checklist, [id*="field-podcast-audio-upload-values"] tbody tr td:nth-child(2) .form-type-managed-file .file-widget .form-file + .form-submit, [id*="loyality-reward-points-configuration-form"] .form-type-managed-file .form-managed-file .form-file + .form-submit, #itg_video_content .ftp-server .video_filters > div.apply_video_filter span, #itg_video_content .ftp-server .video_filters > div.reset_video_filter span, .itg_menu_manager_form .form-item-category-icon .form-submit, .node-story-form .form-field-name-field-story-technology [id*="field-story-technology-values"] tbody tr td .field-name-field-technology-sample-photo .form-type-managed-file .image-widget-data input[type="file"] + .form-submit, [id*="itg-manage-budget"] .form-managed-file #edit-budget-image-upload-button, #itg-budget-predictor-search-form .form-submit, #itg-budget-predictor-search-form .custom-url-search, #itg-budget-predictor-search-user-form .form-submit, #itg-budget-predictor-search-user-form .custom-url-search, [id*="daily-motion-video-dashboard"] fieldset #edit-display-button, [id*="daily-motion-video-dashboard"] #edit-reset, .page-admin-structure-taxonomy-cheaper-dearer .form-file + .form-submit, .comment-view .publish-ugc-comments, .multi_reporter .multi-byline, .byline-list .save-byline, .itg-smi .data-popup-link, [id*="field-photo-story-values"] tbody tr td .form-type-managed-file .image-widget-data input[type="file"] + .form-submit, #itg-user-log-api-form > div > div.user-log-filter-btn .form-submit, #itg-user-log-api-form-visited > div > div.user-log-filter-btn .form-submit, #itg-user-log-api-form > div > div.user-log-filter-btn a, #itg-user-log-api-form-visited > div > div.user-log-filter-btn a, [id*="itg-user-block-api-form"] .user-log-filter-btn .user-block-apply, [id*="itg-user-block-api-form"] .user-log-filter-btn .user-log-reset, [id*="itg-active-user-report-form"] .user-log-filter-btn .form-submit, [id*="itg-active-user-report-form"] .user-log-filter-btn .user-log-reset, [id*="itg-registred-user-report-form"] .form-submit {
   height: 28px;
   line-height: 26px;
   padding: 0 10px;
@@ -11803,3 +11803,48 @@ span.file a {
 }
 
 /*budget predictor css end*/
+[id*="itg-active-user-report-form"] .form-type-textfield, [id*="itg-active-user-report-form"] .form-type-select {
+  float: left;
+  width: 100%;
+  margin-right: 10px;
+  padding: 0;
+}
+[id*="itg-active-user-report-form"] .form-type-textfield.form-item-username, [id*="itg-active-user-report-form"] .form-type-textfield.form-item-email, [id*="itg-active-user-report-form"] .form-type-select.form-item-username, [id*="itg-active-user-report-form"] .form-type-select.form-item-email {
+  max-width: 200px;
+}
+[id*="itg-active-user-report-form"] .form-type-textfield.form-item-mobile, [id*="itg-active-user-report-form"] .form-type-select.form-item-mobile {
+  max-width: 150px;
+}
+[id*="itg-active-user-report-form"] .form-type-textfield.form-item-date-from, [id*="itg-active-user-report-form"] .form-type-textfield.form-item-date-to, [id*="itg-active-user-report-form"] .form-type-select.form-item-date-from, [id*="itg-active-user-report-form"] .form-type-select.form-item-date-to {
+  max-width: 150px;
+}
+[id*="itg-active-user-report-form"] .form-type-textfield.form-item-items-per-page, [id*="itg-active-user-report-form"] .form-type-select.form-item-items-per-page {
+  max-width: 100px;
+}
+[id*="itg-active-user-report-form"] .form-type-textfield > label, [id*="itg-active-user-report-form"] .form-type-select > label {
+  float: none;
+  padding: 5px 0;
+  width: 100%;
+  display: block;
+}
+[id*="itg-active-user-report-form"] .form-type-textfield .form-text, [id*="itg-active-user-report-form"] .form-type-textfield .form-select, [id*="itg-active-user-report-form"] .form-type-select .form-text, [id*="itg-active-user-report-form"] .form-type-select .form-select {
+  width: 100%;
+}
+[id*="itg-active-user-report-form"] .user-log-filter-btn {
+  display: inline-block;
+  margin-top: 38px;
+  vertical-align: top;
+}
+
+[id*="itg-registred-user-report-form"] h2 {
+  margin-bottom: 30px;
+}
+[id*="itg-registred-user-report-form"] .form-type-textfield > label {
+  width: 120px;
+}
+[id*="itg-registred-user-report-form"] .form-type-textfield .form-text {
+  max-width: 200px;
+}
+[id*="itg-registred-user-report-form"] .form-submit {
+  margin-left: 150px;
+}
