--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -721,6 +721,7 @@
   #block-itg-layout-manager-header-block .head-live-tv {
     text-align: right;
     padding: 0 10px;
+    z-index: 99999;
     position: relative;
   }
   #block-itg-layout-manager-header-block .head-live-tv ul {
