--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -716,7 +716,8 @@
     }
     .head-live-tv{
       text-align:right;
-      padding: 0 10px;            
+      padding: 0 10px;   
+      z-index: 99999;
       @include pos(relative);
       ul{
         list-style-type: none;
